// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobStatus> renders correctly for DISABLED status 1`] = `
<Tag
  dataTest="dhis2-uicore-tag"
>
  Disabled
</Tag>
`;

exports[`<JobStatus> renders correctly for DONE status 1`] = `
<Tag
  dataTest="dhis2-uicore-tag"
  positive={true}
>
  Done
</Tag>
`;

exports[`<JobStatus> renders correctly for FAILED status 1`] = `
<Tag
  dataTest="dhis2-uicore-tag"
  negative={true}
>
  Failed
</Tag>
`;

exports[`<JobStatus> renders correctly for NOT_STARTED status 1`] = `
<Tag
  dataTest="dhis2-uicore-tag"
  neutral={true}
>
  Not started
</Tag>
`;

exports[`<JobStatus> renders correctly for RUNNING status 1`] = `
<Tag
  dataTest="dhis2-uicore-tag"
  neutral={true}
>
  Running
</Tag>
`;

exports[`<JobStatus> renders correctly for SCHEDULED status 1`] = `
<Tag
  dataTest="dhis2-uicore-tag"
  neutral={true}
>
  Scheduled
</Tag>
`;

exports[`<JobStatus> renders correctly for STOPPED status 1`] = `
<Tag
  dataTest="dhis2-uicore-tag"
>
  Stopped
</Tag>
`;

exports[`<JobStatus> renders correctly for an invalid status 1`] = `""`;
